@@ -1,5 +1,10 @@
 2004-10-27  Paolo Borelli  <pborelli@katamail.com>
 
+	* gedit-document.[ch]: remove unused function.
+	* gedit2.c: prepend and reverse the list of docs.
+
+2004-10-27  Paolo Borelli  <pborelli@katamail.com>
+
 	* gedit-plugins-engine.c: speedup: prepend to the list.
 
 2004-10-25  Paolo Maggi  <paolo@gnome.org>
